@@ -118,7 +118,11 @@ $pgv_lang["index_dir_cleanup"]		= "Opprydning i Indexmappen";
 ##$pgv_lang["log_message"]			= "Log Message";
 ##$pgv_lang["searchtype"]				= "Search type";
 ##$pgv_lang["query"]					= "Query";
-$pgv_lang["user"]					= "Godkjent bruker";
+##$pgv_lang["user"]					= "Godkjent bruker";
+##$pgv_lang["editors"]				= "Editors";
+##$pgv_lang["gedcom_admins"]			= "GEDCOM Administrators";
+##$pgv_lang["site_admins"]			= "Site Administrators";
+##$pgv_lang["nobody"]					= "Nobody";
 $pgv_lang["thumbnail_deleted"]		= "Miniatyrbilde-fil er nå slettet.";
 $pgv_lang["thumbnail_not_deleted"]	= "Klarte ikke å slette miniatyrbilde-fil.";
 $pgv_lang["step2"]					= "Del 2 av 4:";
