@@ -132,7 +132,7 @@ $pgv_lang["SHOW_MARRIED_NAMES_help"]	= "~#pgv_lang[SHOW_MARRIED_NAMES]#~<br /><b
 $pgv_lang["SHOW_QUICK_RESN"]		= "Show privacy fields on #pgv_lang[quick_update_title]# form";
 $pgv_lang["SHOW_QUICK_RESN_help"]		= "~#pgv_lang[SHOW_QUICK_RESN]#~<br /><br />This option allows you to turn on or off the privacy fields on the #pgv_lang[quick_update_title]# form.  Privacy fields allow a user who is adding information through the form to override the default privacy for the fact they are entering.<br />";
 $pgv_lang["USE_QUICK_UPDATE"]		= "Use #pgv_lang[quick_update_title]# form";
-$pgv_lang["USE_QUICK_UPDATE_help"]		= "~#pgv_lang[USE_QUICK_UPDATE]#~<br /><br />This option allows logged in users to submit changes through the #pgv_lang[quick_update_title]# form.<br />";
+$pgv_lang["USE_QUICK_UPDATE_help"]		= "~#pgv_lang[USE_QUICK_UPDATE]#~<br /><br />This option determines the user privileges required to submit changes through the #pgv_lang[quick_update_title]# form.<br /><br />The choice <b>#pgv_lang[nobody]#</b> means that this form cannot be used at all.<br />";
 $pgv_lang["SEARCHLOG_CREATE"]		= "Archive SearchLog files";
 $pgv_lang["SEARCHLOG_CREATE_help"]	= "~#pgv_lang[SEARCHLOG_CREATE]#~<br /><br />How often should the program archive Searchlog files.<br />";
 $pgv_lang["CHANGELOG_CREATE"]		= "Archive ChangeLog files";
